<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".main.MainActivity">

    <data>
        <import type="android.view.View"/>
        <variable
                name="viewModel"
                type="com.wl.songapp.viewmodel.MainViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGrey"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/main_activity_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/songs_search_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@android:color/white"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:text="@={viewModel.searchTermLiveData}"
                android:hint="@string/main_activity_search_text_hint"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintBottom_toTopOf="@id/main_activity_swipe_refresh"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_activity_toolbar"/>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/main_activity_swipe_refresh"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="2dp"
                app:refreshing="@{viewModel.isLoading}"
                app:onRefreshListener="@{() -> viewModel.onRefresh()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/songs_search_input">
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/songs_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
                android:id="@+id/main_activity_empty_state_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.emptyStateText}"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_16"
                android:visibility="@{viewModel.emptyStateVisible ? View.VISIBLE : View.GONE}"
                tools:text="example text"
                app:layout_constraintTop_toBottomOf="@id/songs_search_input"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>